Add Project Layers

--- a/CourseShop/CourseShop.Web/appsettings.json
+++ b/CourseShop/CourseShop.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CourseShopConnection": "Data Source=PARI-VAIO\\SQLEXPRESS;Initial Catalog=TopLearnCore_DB;Integrated Security = SSPI ;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
