--- a/CourseShop/CourseShop.Core/CourseShop.Core.csproj
+++ b/CourseShop/CourseShop.Core/CourseShop.Core.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Convertors\" />
+    <Folder Include="DTO\" />
+    <Folder Include="Generators\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
