--- a/CourseShop/CourseShop.DataLayer/CourseShop.DataLayer.csproj
+++ b/CourseShop/CourseShop.DataLayer/CourseShop.DataLayer.csproj
@@ -6,11 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CourseShop.Core\CourseShop.Core.csproj" />
   </ItemGroup>
 
 </Project>
