--- a/CourseShop/CourseShop.Web/appsettings.json
+++ b/CourseShop/CourseShop.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CourseShopConnection": "Data Source=PARI-VAIO\\SQLEXPRESS;Initial Catalog=CourseShop;Integrated Security = SSPI ;MultipleActiveResultSets=true"
+    "CourseShopConnection": "Data Source=HATEF-PC\\SQLEXPRESS;Initial Catalog=CourseShop;Integrated Security = SSPI ;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
