add wallet and Inline Payment to project

--- a/CourseShop/CourseShop.DataLayer/CourseShop.DataLayer.csproj
+++ b/CourseShop/CourseShop.DataLayer/CourseShop.DataLayer.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20191102175940_AddWalletAndWalletType.cs" />
+    <Compile Remove="Migrations\20191102180718_UpdateWalletsTable.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
