--- a/CourseShop/CourseShop.Web/CourseShop.Web.csproj
+++ b/CourseShop/CourseShop.Web/CourseShop.Web.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="ZarinPalSandbox" Version="2.0.4" />
   </ItemGroup>
 
   <ItemGroup>
